# word-counter

./: README.md  pyproject.toml  tox.ini
src/: custom_types.py  word_counter.py
tests/: .gitignore  test_word_counter.py
